--- a/package.json
+++ b/package.json
@@ -9,17 +9,33 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
+    "@react-three/drei": "^10.0.0",
+    "@react-three/fiber": "^9.0.4",
+    "@tailwindcss/postcss": "^4.0.7",
+    "clsx": "^2.1.1",
+    "framer-motion": "^12.16.0",
+    "gsap": "^3.13.0",
+    "lenis": "^1.3.3",
+    "lucide-react": "^0.475.0",
+    "next": "15.1.7",
+    "next-themes": "^0.4.4",
+    "next-view-transitions": "^0.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.1.7"
+    "react-icons": "^5.5.0",
+    "react-use": "^17.6.0",
+    "resend": "^4.5.2",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss": "^4.0.7",
+    "three": "^0.173.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
+    "@eslint/eslintrc": "^3",
+    "@types/node": "24.0.1",
     "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.1.7",
-    "@eslint/eslintrc": "^3"
+    "@types/three": "^0.173.0",
+    "typescript": "5.8.3"
   }
 }
